--- a/realTime-services/client/index.html
+++ b/realTime-services/client/index.html
@@ -15,7 +15,7 @@
         <thead>
             <tr>
                 <th>
-                    <p>value</p>
+                    <p>device</p>
                 </th>
                 <th>
                     <p>tempreture</p>
